editing resume and css style

--- a/resume.html
+++ b/resume.html
@@ -8,10 +8,77 @@
 
 <head>
 <link rel="stylesheet" href="css_styling.css">
+<title>Avita Sharma</title>
+<email>Avita.Sharma@tufts.edu</email>
 </head>
 
 <body>
-<!-- Content of the page goes here.  So many ways to create content. -->
+
+
+
+<!-- \section*{Education}
+\vspace{-2mm}
+\rule{\textwidth}{2pt}
+\indent \textbf{Tufts University}, Medford, MA \\
+\indent Bachelor of Science in Computer Science, Mathematics, and Quantitative Economics, May 2017 \\
+\indent GPA: 3.53/4.0, Dean’s List \\
+\indent Recipient of Dorothy Altman Weber, J64, and Stephen R. Weber Endowed Scholarship \\
+
+\indent \textbf{Relevant Coursework:} Intro to Machine Learning, Statistical Pattern Recognition, High Performance 
+\indent Computing, Concurrent Programming, Programming Languages, Game Theory, Mathematical Modeling, 
+\indent Econometric Analysis 
+
+\section*{Technical Experience}
+\vspace{-2mm}
+\rule{\textwidth}{2pt}
+\setlist[itemize]{leftmargin=5.5mm}
+\indent \textbf{Teaching Assistant,} Tufts University Computer Science Department, January 2014 - August 2016
+\vspace{-2mm}
+\begin{itemize}[noitemsep]
+\item Taught undergraduate students C++
+\item Graded students’ assignments and projects
+\item Facilitated a weekly lab class
+\item Held office hours to answer students' questions about C++ and coding
+\end{itemize}
+
+\indent \textbf{Research Assistant,} Tufts University Summer Scholars Program, June 2015 - June 2016
+\vspace{-2mm}
+\begin{itemize}[noitemsep]
+\item Who is Doing What? Functional Matching between Metabolites and Genomics for Bacterial Pathways
+\item Created and Analyzed Datasets and Matrices linking Metabolites, Pathways, and Gene groups
+\item Retrieved database entries using KEGG's API
+\item Presented project at the Summer Scholars Oral Presentations event
+\end{itemize}
+
+\indent \textbf{Engineering Intern,} TradeStation, Hummingbird (Chart Analysis) Team,  May 2014 - August 2014
+\vspace{-2mm}
+\begin{itemize}[noitemsep]
+\item Wrote unit tests for the Charting application
+\item Programmed and debugged different trading algorithms using TradeStation's EasyLanguage
+\item Modeled user stories, which detailed updates from 2D to 3D interactive graphs
+\item Researched and implemented Optimal f, Martingale, and Monte Carlo simulations
+\item Created 3D charting prototypes, including a Treasury Yield Curve, Profit/Loss heat map, and Market Depth graphs
+\end{itemize}
+\section*{Other Experience}
+\vspace{-2mm}
+\rule{\textwidth}{2pt}
+
+\indent \textbf{Student Office Assistant,} Tufts University English Department, September 2014 - Present
+\vspace{-2mm}
+\begin{itemize}[noitemsep]
+\item Enter data, update the department’s webpage, and create online calendars
+\item Prepare handouts and readings for English professors and graduate TAs
+\item Greet students, operate the phone system, and order office supplies
+\item Update the English section of Tufts’ online student information system
+\end{itemize}
+
+\section*{Skills}
+\vspace{-2mm}
+\rule{\textwidth}{2pt}
+\indent \textbf{Programming Languages:} C++, C, MATLAB, Erlang, Python, SML, Scheme, Java, Unix Shell, \\ \indent Assembly Language, STATA \\
+
+\indent \textbf{Languages:} Italian - proficient
+-->
 </body>
 
 </html>
