--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
 <!-- This part of the document contains HTML -->
 
 	<head>
+		<meta charset="utf-8"/>
 		<title>Avita Sharma</title>
 		<email>Avita.Sharma@tufts.edu</email>
 	</head>
