editing resume and css style

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Avita Sharma</title>
-		<email>Avita.Sharma@tufts.edu</email>
+		<!-- <email>Avita.Sharma@tufts.edu</email> -->
 	</head>
 
 	<body>
