--- a/resume.html
+++ b/resume.html
@@ -8,15 +8,16 @@
 
 	<head>
 		<meta charset="utf-8"/>
-		<title>Avita Sharma</title>
-		<!-- <email>Avita.Sharma@tufts.edu</email> -->
+		<title> Resume </title>
 	</head>
 
 	<body>
-		<title> Yo!<title/>
+		<h1> Avita Sharma </h1>
+		<a href="mailto:Avita.Sharma@tufts.edu"><div id="mail">Avita.Sharma@tufts.edu</div></a>
 
 
-<!-- \section*{Education}
+		<h2>Education</h2>
+<!--
 \vspace{-2mm}
 \rule{\textwidth}{2pt}
 \indent \textbf{Tufts University}, Medford, MA \\
