added experience and skills

--- a/resume.html
+++ b/resume.html
@@ -13,73 +13,76 @@
 
 	<body>
 		<h1> Avita Sharma </h1>
-		<a href="mailto:Avita.Sharma@tufts.edu"><div id="mail">Avita.Sharma@tufts.edu</div></a>
+		<div id="content">
+		<a href="mailto:Avita.Sharma@tufts.edu"><div id="mail">Avita.Sharma@tufts.edu</div></a></div>
 
 
-		<h2>Education</h2>
-<!--
-\vspace{-2mm}
-\rule{\textwidth}{2pt}
-\indent \textbf{Tufts University}, Medford, MA \\
-\indent Bachelor of Science in Computer Science, Mathematics, and Quantitative Economics, May 2017 \\
-\indent GPA: 3.53/4.0, Dean’s List \\
-\indent Recipient of Dorothy Altman Weber, J64, and Stephen R. Weber Endowed Scholarship \\
+		<h2>Education<hr></h2>
 
-\indent \textbf{Relevant Coursework:} Intro to Machine Learning, Statistical Pattern Recognition, High Performance 
-\indent Computing, Concurrent Programming, Programming Languages, Game Theory, Mathematical Modeling, 
-\indent Econometric Analysis 
+		<h3> <strong>Tufts University</strong>, Medford, MA
+		<br> Bachelor of Science in Computer Science, Mathematics, and Quantitative Economics, May 2017
+		<br>GPA: 3.53/4.0, Dean’s List
+		<br>Recipient of Dorothy Altman Weber, J64, and Stephen R. Weber Endowed Scholarship 
+		</h3>
 
-\section*{Technical Experience}
-\vspace{-2mm}
-\rule{\textwidth}{2pt}
-\setlist[itemize]{leftmargin=5.5mm}
-\indent \textbf{Teaching Assistant,} Tufts University Computer Science Department, January 2014 - August 2016
-\vspace{-2mm}
-\begin{itemize}[noitemsep]
-\item Taught undergraduate students C++
-\item Graded students’ assignments and projects
-\item Facilitated a weekly lab class
-\item Held office hours to answer students' questions about C++ and coding
-\end{itemize}
+		<h2> Relevant Coursework <hr></h2>
 
-\indent \textbf{Research Assistant,} Tufts University Summer Scholars Program, June 2015 - June 2016
-\vspace{-2mm}
-\begin{itemize}[noitemsep]
-\item Who is Doing What? Functional Matching between Metabolites and Genomics for Bacterial Pathways
-\item Created and Analyzed Datasets and Matrices linking Metabolites, Pathways, and Gene groups
-\item Retrieved database entries using KEGG's API
-\item Presented project at the Summer Scholars Oral Presentations event
-\end{itemize}
+		<div class ="myh3"> Intro to Machine Learning, Statistical Pattern Recognition, High Performance Computing, Concurrent Programming, Programming Languages, Game Theory, Mathematical Modeling, Econometric Analysis, and Web Programming </div>
 
-\indent \textbf{Engineering Intern,} TradeStation, Hummingbird (Chart Analysis) Team,  May 2014 - August 2014
-\vspace{-2mm}
-\begin{itemize}[noitemsep]
-\item Wrote unit tests for the Charting application
-\item Programmed and debugged different trading algorithms using TradeStation's EasyLanguage
-\item Modeled user stories, which detailed updates from 2D to 3D interactive graphs
-\item Researched and implemented Optimal f, Martingale, and Monte Carlo simulations
-\item Created 3D charting prototypes, including a Treasury Yield Curve, Profit/Loss heat map, and Market Depth graphs
-\end{itemize}
-\section*{Other Experience}
-\vspace{-2mm}
-\rule{\textwidth}{2pt}
+		<h2>Technical Experience <hr></h2>
 
-\indent \textbf{Student Office Assistant,} Tufts University English Department, September 2014 - Present
-\vspace{-2mm}
-\begin{itemize}[noitemsep]
-\item Enter data, update the department’s webpage, and create online calendars
-\item Prepare handouts and readings for English professors and graduate TAs
-\item Greet students, operate the phone system, and order office supplies
-\item Update the English section of Tufts’ online student information system
-\end{itemize}
+		<div class = "myBulletsOne">
+		<strong>Teaching Assistant,</strong> Tufts University Computer Science Department, January 2014 - August 2016
+		<ul>
+		<li> Taught undergraduate students C++ </li>
+		<li> Graded students’ assignments and projects </li>
+		<li> Facilitated a weekly lab class </li>
+		<li> Held office hours to answer students' questions about C++ and coding </li>
+		</ul>
+		</div>
 
-\section*{Skills}
-\vspace{-2mm}
-\rule{\textwidth}{2pt}
-\indent \textbf{Programming Languages:} C++, C, MATLAB, Erlang, Python, SML, Scheme, Java, Unix Shell, \\ \indent Assembly Language, STATA \\
+		<div class="myBulletsTwo">
+		<strong>Research Assistant,</strong> Tufts University Summer Scholars Program, June 2015 - June 2016 
+		<ul>
+		<li> Who is Doing What? Functional Matching between Metabolites and Genomics for Bacterial Pathways </li>
+		<li> Created and Analyzed Datasets and Matrices linking Metabolites, Pathways, and Gene groups </li>
+		<li> Retrieved database entries using KEGG's API </li>
+		<li> Presented project at the Summer Scholars Oral Presentations event </li>
+		</ul>
+		</div>
 
-\indent \textbf{Languages:} Italian - proficient
--->
-</body>
+		<div class="myBulletsOne">
+		<strong>Engineering Intern,</strong> TradeStation, Hummingbird (Chart Analysis) Team,  May 2014 - August 2014
+		<ul>
+		<li> Wrote unit tests for the Charting application </li>
+		<li> Programmed and debugged different trading algorithms using TradeStation's EasyLanguage </li>
+		<li> Modeled user stories, which detailed updates from 2D to 3D interactive graphs
+		</li>
+		<li> Researched and implemented Optimal f, Martingale, and Monte Carlo simulations </li>
+		<li> Created 3D charting prototypes, including a Treasury Yield Curve, Profit/Loss heat map, and Market Depth graphs </li>
+		</ul>
+		</div>
+
+		<h2>Other Experience <hr></h2>
+
+		<div class="myBulletsTwo">
+		<strong>Student Office Assistant,</strong> Tufts University English Department, September 2014 - Present
+		<ul>
+		<li> Enter data, update the department’s webpage, and create online calendars </li>
+		<li> Prepare handouts and readings for English professors and graduate TAs </li>
+		<li> Greet students, operate the phone system, and order office supplies </li>
+		<li> Update the English section of Tufts’ online student information system </li>
+		</ul>
+		</div>
+
+		<h2>Skills<hr></h2>
+
+		<h3>
+		<strong>Programming Languages:</strong> C++, C, MATLAB, Erlang, Python, SML, Scheme, Java, Unix Shell, Assembly Language, STATA <br>
+		<strong>Markup Languages:</strong> Latex, HTML5, CSS <br>
+		<strong>Languages:</strong> Italian - proficient
+		</h3>
+
+	</body>
 
 </html>
