added simple index page

--- a/resume.html
+++ b/resume.html
@@ -19,9 +19,9 @@
 
 		<h2>Education<hr></h2>
 
-		<h3> <strong>Tufts University</strong>, Medford, MA
+		<h3> <b>Tufts University</b>, Medford, MA
 		<br> Bachelor of Science in Computer Science, Mathematics, and Quantitative Economics, May 2017
-		<br>GPA: 3.53/4.0, Dean’s List
+		<br>GPA: 3.43/4.0, Dean’s List
 		<br>Recipient of Dorothy Altman Weber, J64, and Stephen R. Weber Endowed Scholarship 
 		</h3>
 
@@ -32,7 +32,7 @@
 		<h2>Technical Experience <hr></h2>
 
 		<div class = "myBulletsOne">
-		<strong>Teaching Assistant,</strong> Tufts University Computer Science Department, January 2014 - August 2016
+		<b>Teaching Assistant,</b> Tufts University Computer Science Department, January 2014 - August 2016
 		<ul>
 		<li> Taught undergraduate students C++ </li>
 		<li> Graded students’ assignments and projects </li>
@@ -42,7 +42,7 @@
 		</div>
 
 		<div class="myBulletsTwo">
-		<strong>Research Assistant,</strong> Tufts University Summer Scholars Program, June 2015 - June 2016 
+		<b>Research Assistant,</b> Tufts University Summer Scholars Program, June 2015 - June 2016 
 		<ul>
 		<li> Who is Doing What? Functional Matching between Metabolites and Genomics for Bacterial Pathways </li>
 		<li> Created and Analyzed Datasets and Matrices linking Metabolites, Pathways, and Gene groups </li>
@@ -52,7 +52,7 @@
 		</div>
 
 		<div class="myBulletsOne">
-		<strong>Engineering Intern,</strong> TradeStation, Hummingbird (Chart Analysis) Team,  May 2014 - August 2014
+		<b>Engineering Intern,</b> TradeStation, Hummingbird (Chart Analysis) Team,  May 2014 - August 2014
 		<ul>
 		<li> Wrote unit tests for the Charting application </li>
 		<li> Programmed and debugged different trading algorithms using TradeStation's EasyLanguage </li>
@@ -66,7 +66,7 @@
 		<h2>Other Experience <hr></h2>
 
 		<div class="myBulletsTwo">
-		<strong>Student Office Assistant,</strong> Tufts University English Department, September 2014 - Present
+		<b>Student Office Assistant,</b> Tufts University English Department, September 2014 - Present
 		<ul>
 		<li> Enter data, update the department’s webpage, and create online calendars </li>
 		<li> Prepare handouts and readings for English professors and graduate TAs </li>
@@ -78,9 +78,9 @@
 		<h2>Skills<hr></h2>
 
 		<h3>
-		<strong>Programming Languages:</strong> C++, C, MATLAB, Erlang, Python, SML, Scheme, Java, Unix Shell, Assembly Language, STATA <br>
-		<strong>Markup Languages:</strong> Latex, HTML5, CSS <br>
-		<strong>Languages:</strong> Italian - proficient
+		<b>Programming Languages:</b> C++, C, MATLAB, Erlang, Python, SML, Scheme, Java, Unix Shell, Assembly Language, STATA <br>
+		<b>Markup Languages:</b> Latex, HTML5, CSS <br>
+		<b>Languages:</b> Italian - proficient
 		</h3>
 
 	</body>
