added links to index

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 	<body>
 		<h1> Avita Sharma </h1>
 		<div id="content">
-		<a href="resume.html">RESUME</a>
-		<a href="bio.html">BIO</a>
+			<div id="mail">
+				<a href="resume.html">RESUME</a>
+				<a href="bio.html">BIO</a>
+			</div>
 		</div>
 	</body>
 </html>
