--- a/resume.html
+++ b/resume.html
@@ -14,8 +14,13 @@
 	<body>
 		<h1> Avita Sharma </h1>
 		<div id="content">
-		<a href="mailto:Avita.Sharma@tufts.edu"><div id="mail">Avita.Sharma@tufts.edu</div></a></div>
-
+		<div id="mail">
+		<a href="index.html">HOME</a>
+		&emsp;
+		<a href="mailto:Avita.Sharma@tufts.edu">Avita.Sharma@tufts.edu</a>
+		&emsp;
+		<a href="bio.html">BIO</a>
+		</div>
 
 		<h2>Education<hr></h2>
 
