--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
 		<div id="content">
 			<div id="mail">
 				<a href="resume.html">RESUME</a>
+				&emsp; HOME &emsp;
 				<a href="bio.html">BIO</a>
 			</div>
+			<a href="resume.html">
+			<img src="MyPic.jpg" alt="Link to resume">
+			</a>
+			<a href="bio.html">
+			<div class ="Rimg"><img src ="Kozue-Amano.png" alt ="Link to bio"></div>
+			</a>
 		</div>
 	</body>
 </html>
