trying to fix font

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<a href="bio.html">BIO</a>
 			</div>
 			<a href="resume.html">
-			<img src="MyPic.jpg" alt="Link to resume">
+			<img src="MyPic.JPG" alt="Link to resume">
 			</a>
 			<a href="bio.html">
 			<div class ="Rimg"><img src ="Kozue-Amano.png" alt ="Link to bio"></div>
