added link to github

--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,9 @@
 	</head>
 
 	<body>
-		<h1> Avita Sharma </h1>
+		<a href="https://github.com/avita21">
+			<h1> Avita Sharma </h1>
+		</a>
 		<div id="content">
 		<div id="mail">
 		<a href="index.html">HOME</a>
