Feature: Adding Rlyehian Font Page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<a href="resume.html">RESUME</a>
 				&emsp; HOME &emsp;
 				<a href="bio.html">BIO</a>
+				<a href="fonts.html">FONTS</a>
 			</div>
 			<a href="resume.html">
 			<img src="MyPic.JPG" alt="Link to resume">
