adding dnd test

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				&emsp; HOME &emsp;
 				<a href="bio.html">BIO</a>
 				<a href="fonts.html">FONTS</a>
+				<a href="dnd.html">NOPE</a>
 			</div>
 			<a href="resume.html">
 			<img src="MyPic.JPG" alt="Link to resume">
